@@ -32,6 +32,7 @@ itrade_quotes_euronext.py
 itrade_quotes_nyse.py
 itrade_quotes_swx.py
 itrade_quotes_lse.py
+itrade_quotes_ie.py
 
 # login
 
